Clean up session opening

--- a/ui/main-sidebar/current-user-summary.reel/current-user-summary.html
+++ b/ui/main-sidebar/current-user-summary.reel/current-user-summary.html
@@ -31,7 +31,7 @@
                 "disableTranslation": true
             },
             "bindings": {
-                "value": {"<-": "@owner.middlewareClient.url"}
+                "value": {"<-": "@owner.url"}
             }
         },
         "user": {
@@ -41,7 +41,7 @@
                 "disableTranslation": true
             },
             "bindings": {
-                "value": {"<-": "@owner.middlewareClient.user"}
+                "value": {"<-": "@owner.user"}
             }
         },
         "date": {
