Add restart button to containers. Ticket: #20549

--- a/ui/sections/containers/inspectors/container-editor.reel/container-editor.html
+++ b/ui/sections/containers/inspectors/container-editor.reel/container-editor.html
@@ -23,6 +23,17 @@
             }
         },
 
+        "restart": {
+            "prototype": "blue-shark/ui/button.reel",
+            "properties": {
+                "element": {"#": "restart"},
+                "value": "Restart"
+            },
+            "bindings": {
+                "disabled": {"<-": "!@start.disabled"}
+            }
+        },
+
         "stop": {
             "prototype": "blue-shark/ui/button.reel",
             "properties": {
@@ -349,6 +360,7 @@
         <div data-montage-id="inspector">
             <div class="g-margin-bottom">
                 <div data-montage-id="start"></div>
+                <div data-montage-id="restart"></div>
                 <div data-montage-id="stop"></div>
                 <div data-montage-id="serialConsole"></div>
                 <div data-montage-id="webUI"></div>
