--- a/ui/sections/accounts/inspectors/overview.reel/overview.html
+++ b/ui/sections/accounts/inspectors/overview.reel/overview.html
@@ -55,8 +55,8 @@
             <div>
                 <div class="Overview-content">
                     <div data-montage-id="users"></div>
-                    <div data-montage-id="groups"></div>
-                    <div data-montage-id="system"></div>
+                    <div data-montage-id="groups" class="g-margin-top--subtract"></div>
+                    <div data-montage-id="system" class="g-margin-top--subtract"></div>
                 </div>
             </div>
         </div>
