--- a/ui/sections/storage/inspectors/overview.reel/overview.html
+++ b/ui/sections/storage/inspectors/overview.reel/overview.html
@@ -59,7 +59,7 @@
             "prototype": "montage/ui/component",
             "properties": {
                 "element": {"#": "content"},
-                "hasTemplate": "false"
+                "hasTemplate": false
             },
             "bindings": {
                 "classList.has('is-hidden')": {"<-": "!@owner.hasContent"}
