--- a/ui/sections/storage/inspectors/volume.reel/volume.html
+++ b/ui/sections/storage/inspectors/volume.reel/volume.html
@@ -173,16 +173,16 @@
 </head>
 <body>
     <div data-montage-id="owner" class="Volume">
-        <div class="Volume-header">
-            <div data-montage-id="volumeIcon" class="Volume-header-icon"></div>
-            <div class="Volume-header-info">
-                <div data-montage-id="size" class="Volume-header-diskSize"></div>
-                <small data-montage-id="capacityLabel" class="flush-bottom"></small>
-            </div>
-        </div>
-        <div data-montage-id="allocationBar" class="Volume-allocationBar"></div>
         <div data-montage-id="inspector">
-            <div data-montage-id="shares" class="g-margin-top--subtract"></div>
+            <div class="Volume-header">
+                <div data-montage-id="volumeIcon" class="Volume-header-icon"></div>
+                <div class="Volume-header-info">
+                    <div data-montage-id="size" class="Volume-header-diskSize"></div>
+                    <small data-montage-id="capacityLabel" class="flush-bottom"></small>
+                </div>
+            </div>
+            <div data-montage-id="allocationBar" class="Volume-allocationBar"></div>
+            <div data-montage-id="shares"></div>
             <div data-montage-id="snapshots"></div>
             <div data-montage-id="topology"></div>
             <div data-montage-id="datasets"></div>
