--- a/ui/sections/system/inspectors/preferences.reel/preferences.html
+++ b/ui/sections/system/inspectors/preferences.reel/preferences.html
@@ -141,13 +141,13 @@
             }
         },
         "uploadConfig": {
-            "prototype": "blue-shark/ui/field-file-upload.reel",
+            "prototype": "blue-shark/ui/field-file-input.reel",
             "properties": {
                 "element": {"#": "uploadConfig"},
                 "label": "Upload Config File"
             },
             "bindings": {
-                "data": {"<->": "@owner.configFile"}
+                "file": {"<->": "@owner.configFile"}
             }
         },
         "applyConfig": {
