Use standard formatter for boot-pool sizes

--- a/ui/sections/system/inspectors/boot-pool.reel/boot-environment-row.reel/boot-environment-row.html
+++ b/ui/sections/system/inspectors/boot-pool.reel/boot-environment-row.reel/boot-environment-row.html
@@ -35,12 +35,13 @@
         },
 
         "space": {
-            "prototype": "../size-cell.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
-                "element": {"#": "space"}
+                "element": {"#": "space"},
+                "value": "{value, 0 b}"
             },
             "bindings": {
-                "value": {"<-": "@owner.object.space"}
+                "args": {"<-": "!!@owner.object.space ? {value: @owner.object.space} : {value: 0}"}
             }
         },
 
