Use number-unit component for token lifetime

--- a/ui/sections/system/inspectors/web-ui.reel/web-ui.html
+++ b/ui/sections/system/inspectors/web-ui.reel/web-ui.html
@@ -144,17 +144,14 @@
                 "selectedValue": {"<->": "@owner.config.webui_https_certificate"}
             }
         },
-        "tokenLiftTimeConverter": {
-            "prototype": "core/converter/string-to-integer-or-null-converter"
-        },
         "freenas_token_lifetime": {
-            "prototype": "blue-shark/ui/field-text-input.reel",
+            "prototype": "blue-shark/ui/field-number-unit.reel",
             "properties": {
                 "element": {"#": "freenas_token_lifetime"},
-                "label": "Token Lifetime",
-                "converter" : {"@": "tokenLiftTimeConverter"}
+                "label": "Token Lifetime"
             },
             "bindings": {
+                "units": {"<-": "@owner.timeUnits"},
                 "value": {"<->": "@owner.systemAdvanced.freenas_token_lifetime"}
             }
         }
