Sort alphabetically docker images. Ticket: #20738

--- a/ui/sections/containers/controls/docker-image-search.reel/docker-image-search.html
+++ b/ui/sections/containers/controls/docker-image-search.reel/docker-image-search.html
@@ -49,7 +49,7 @@
                 ]
             },
             "bindings": {
-                "rows": {"<-": "@owner._templates"},
+                "rows": {"<-": "@owner._templates.sorted{name}"},
                 "isLoading": {"<-": "@owner._isSearchingDockerImages"}
             }
         }
