changes Free to Usable on allocation bar Ticket: #20827

--- a/ui/controls/allocation-bar.reel/allocation-bar.html
+++ b/ui/controls/allocation-bar.reel/allocation-bar.html
@@ -54,7 +54,7 @@
             "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "availableTitle"},
-                "value": "Free"
+                "value": "Usable"
             }
         },
         "availableValue": {
