add support for docker container 'immutable' preset Ticket: #20691

--- a/ui/sections/containers/controls/table-port.reel/table-port.html
+++ b/ui/sections/containers/controls/table-port.reel/table-port.html
@@ -41,6 +41,9 @@
             "properties": {
                 "element": {"#": "tableHeader"},
                 "table": {"@": "table"}
+            },
+            "bindings": {
+                "addButtonDisabled": {"<-": "@owner.disabled"}
             }
         },
 
