--- a/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
+++ b/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
@@ -152,7 +152,8 @@
                 "label": "Expose Ports"
             },
             "bindings": {
-                "checked": {"<->": "!!@owner.object.expose_ports"}
+                "checked": {"<->": "!!@owner.object.expose_ports"},
+                "disabled": {"<-": "@owner.currentTemplate.immutable.has('expose_ports')"}
             }
         },
 
@@ -163,7 +164,8 @@
                 "label": "Command"
             },
             "bindings": {
-                "value": {"<-": "@owner.currentTemplate.command.join(' ')"}
+                "value": {"<-": "@owner.currentTemplate.command.join(' ')"},
+                "disabled": {"<-": "@owner.currentTemplate.immutable.has('command')"}
             }
         },
 
@@ -195,7 +197,8 @@
             },
             "bindings": {
                 "inspector": {"<-": "@inspector"},
-                "values": {"<-": "@owner.currentTemplate.ports.map{{ host_port: host_port, container_port: container_port, protocol: protocol }}"}
+                "values": {"<-": "@owner.currentTemplate.ports.map{{ host_port: host_port, container_port: container_port, protocol: protocol }}"},
+                "disabled": {"<-": "@owner.currentTemplate.immutable.has('ports')"}
             }
         },
 
@@ -217,7 +220,8 @@
                 "label": "Interactive"
             },
             "bindings": {
-                "checked": {"<->": "@owner.object.interactive"}
+                "checked": {"<->": "@owner.object.interactive"},
+                "disabled": {"<-": "@owner.currentTemplate.immutable.has('interactive')"}
             }
         },
 
@@ -228,7 +232,8 @@
                 "label": "Privileged"
             },
             "bindings": {
-                "checked": {"<->": "@owner.object.privileged"}
+                "checked": {"<->": "@owner.object.privileged"},
+                "disabled": {"<-": "@owner.currentTemplate.immutable.has('privileged')"}
             }
         },
 
@@ -239,7 +244,8 @@
                 "label": "Bridged"
             },
             "bindings": {
-                "checked": {"<->": "@owner.object.bridge.enable"}
+                "checked": {"<->": "@owner.object.bridge.enable"},
+                "disabled": {"<-": "@owner.currentTemplate.immutable.has('bridge.enable')"}
             }
         },
 
@@ -264,7 +270,8 @@
             },
             "bindings": {
                 "checked": {"<->": "@owner.object.bridge.dhcp"},
-                "classList.has('hide')": {"<-": "!@owner.object.bridge.enable"}
+                "classList.has('hide')": {"<-": "!@owner.object.bridge.enable"},
+                "disabled": {"<-": "@owner.currentTemplate.immutable.has('bridge.dhcp')"}
             }
         },
 
@@ -287,7 +294,8 @@
                 "label": "Start at Boot"
             },
             "bindings": {
-                "checked": {"<->": "@owner.object.autostart"}
+                "checked": {"<->": "@owner.object.autostart"},
+                "disabled": {"<-": "@owner.currentTemplate.immutable.has('autostart')"}
             }
         },
 
