Fixed mapall_group mapping

--- a/ui/sections/storage/inspectors/share.reel/nfs-share.reel/nfs-share.html
+++ b/ui/sections/storage/inspectors/share.reel/nfs-share.reel/nfs-share.html
@@ -116,7 +116,7 @@
                 "converter": {"@": "groupsOptionsConverter"}
             },
             "bindings": {
-                "value": {"<->": "@owner.properties.mapall_group"},
+                "selectedValue": {"<->": "@owner.properties.mapall_group"},
                 "options": {"<-": "@owner.mapGroups"}
             }
         },
