--- a/ui/inspectors/service.reel/ups-service.reel/ups-service.html
+++ b/ui/inspectors/service.reel/ups-service.reel/ups-service.html
@@ -128,13 +128,13 @@
             }
         },
         "shutdown_timer": {
-            "prototype": "blue-shark/ui/field-text-input.reel",
+            "prototype": "blue-shark/ui/field-number-unit.reel",
             "properties": {
                 "element": {"#": "shutdown_timer"},
-                "label": "Shutdown Timer",
-                "converter": {"@": "upsTimerConverter"}
+                "label": "Shutdown Timer"
             },
             "bindings": {
+                "units": {"<-": "@owner.timerUnits"},
                 "value": {"<->": "@owner.object.shutdown_timer"}
             }
         },
